# discord-orb-quest-termux

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  setup-termux.sh
.github/workflows/: ci.yml
orbquest/: __init__.py  __main__.py  api.py  config.py  quests.py  runner.py  ui.py
tests/: mock_discord.py  test_integration.py  test_quests.py  test_runner.py
