[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbquest"
version = "0.1.0"
description = "Complete Discord orb quests from Termux on Android over the REST API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["requests>=2.31.0"]

[project.scripts]
orbquest = "orbquest.__main__:main"

[tool.setuptools]
packages = ["orbquest"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
